assets/sass/global/_mdl-custom.scss
.mdl-card {
    min-height: 0;
}
.mdl-card__supporting-text {
    width: 90%;
    padding: 10px 5%;
}
.mdl-card__title {
    background: unquote("rgb(#{$color-primary})");
    color: #fff;
}
.mdl-card__image {
    margin: 0 auto;
    color: #fff;
    min-height: 200px;
}
.mdl-card__image .mdl-card__title {
    background-color: transparent;
}
.mdl-card__image .mdl-card__actions {
    background: unquote("rgb(#{$color-primary})");
    color: #fff;
}
.mdl-card__actions {
    display: flex;
    box-sizing: border-box;
    align-items: center;
}
.mdl-card--prewrap {
    white-space: pre-line;
}

.mdl-cell__info {
    padding :10px 0;
}

.mdl-mega-footer__heading {
    font-size: 18px;
    padding: 0;
}
.section--center {
    max-width: 860px;
}

.mdl-textfield {
    width: 100%;
}
.mdl-nospacing {
    margin: 0;
    padding: 0;
}

